# alz-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci-dev.yml  ci-main.yml  deploy.yml  docker-publish.yml
app/: main.py
app/routes/mri/: predict.py
common/utils/: config.py  seed.py
configs/mri/: config.yaml
domains/mri/: dataset.py  model.py
metrics/: classification.py
models/: mobilenet.py  vit.py
scripts/mri/: debug_dataset.py  evaluate.py  inference.py  train.py
tests/mri/: test_dataset.py  test_vit_model.py
training/: evaluator.py  trainer.py
