[project]
name = "alz_api"
version = "0.1"
description = "Alzheimer's API"
authors = [{ name="Serge Alhalbi", email="serge.alhalbi@gmail.com" }]
license = {text = "MIT"}
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "app",
    "common",
    "domains",
    "metrics",
    "models",
    "scripts",
    "tests",
    "training"
]